# tech_challenge_fase01

./: README.md  pyproject.toml  requirements.txt  run.py
docs/: Informacoes.docx  plano arquitetural.docx
src/techchallenge/: README.md  app.py  run.py
src/techchallenge/api/: routes.py
src/techchallenge/app/: __init__.py  create.py  models.py
src/techchallenge/data/input/: books.csv  categories.csv
src/techchallenge/scripts/: etl_books.py  etl_categories.py
src/techchallenge/services/: etlservice.py
src/techchallenge/utils/: jwt_utils.py
